--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack --config webpack.config.js",
     "gh": "node build/gh.js",
-    "hot": "webpack-dev-server --env.config pro --open",
+    "hot": "webpack-dev-server --env.config local --env.hot --env.local",
     "build": "webpack --env.config pro "
   },
   "scripts-info": {
@@ -19,10 +19,12 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "gh-pages": "^2.0.1",
+    "html-webpack-harddisk-plugin": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.12.2",
     "npm": "^6.6.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
